fixed: scrollbar style

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@ html {
 
 *::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 *::-webkit-scrollbar-track {
